# campuscloud

./: .env  .gitignore  API Document.docx  API Documentation (Phase 2).docx  CLAUDE.md  LICENSE  NIST Mapping (Phase 2).docx  NIST Mapping.docx  NIST_MAPPING.md  PROJECT_API.md  README.md  billing_logic (1).py  docker_helper.py  main.py  schema.sql  validate_quota.py.py
.github/workflows/: chatgpt-review.yml  claude-review.yml  contributors.yml  enforce-main.yml
B12/: pyproject.toml
B12/campuscloud_dp/: __init__.py  main.py
B12/campuscloud_dp/groups/: integration.py
B12/campuscloud_dp/ui_assets/: index.html  integration.html
B12/campuscloud_dp/ui_assets/assets/: dashboard.js  integration.js
B12/phase1-deliverables/integration-support/: api-documentation.tex  architecture-diagram.mmd  nist-mapping.tex
Phase 1/: CONTRIBUTING.md  README.md  run_frontend.sh  run_tests.sh
Phase 1/campuscloud_dp/: docker_helper.py
Phase 2/: Requirements.md  config.py  db.py  docker_helper.py
Phase 2/groups/: __init__.py  compute.py  integration.py  network.py
api-gateway/: README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  package-lock.json  package.json  schema.sql  server.js
backend/config/: db.js
campuscloud_dp/: db.py
database/: README.md  SCHEMA.md  schema.sql  schema_A11.sql
documentation/: architecture-diagram.mmd
frontend/: API_DOCS.md  ARCHITECTURE.md  NIST_COMPLIANCE.md  README.md  package-lock.json
groups/: compute.py
routes/: login.js  projects.js
tests/: test_api.py  test_ui.py
ui_assets/: compute.html  index.html
(+79 files in other folders)
