[project]
name = "campuscloud-data-plane"
version = "0.1.0"
description = "Phase 1 BDS-8B CampusCloud data plane"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "docker>=7.1.0",
  "fastapi>=0.115.11",
  "httpx>=0.28.1",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["campuscloud_dp"]
